# Browser-Key-Extraction

./: .env.example  .gitignore  CHROMIUM_FORENSICS.md  FIREFOX_FORENSICS.md  INDEX.md  LICENSE  Makefile  PROCESS.md  README.md  SETUP.md  browser_profiles.py  chromium_decrypt.py  evidence_integrity.py  extractors.py  forensic_models.py  html_renderer.py  html_report.py  install.py  main.py  nss_decrypt.py  pyproject.toml  report_builder.py  report_generators.py  requirements.txt  setup.sh  timestamp_utils.py
docs/: ARCHITECTURE.md  CLI.md  DECRYPTION.md
