[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "firefox-forensics"
version = "1.0.0"
description = "Extract and analyze forensic artifacts from Firefox profiles including passwords, history, cookies, and more"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Firefox Forensics Team"}
]
keywords = [
    "firefox",
    "forensics",
    "password",
    "browser",
    "extraction",
    "security",
    "DFIR",
    "incident-response"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Recovery Tools",
    "Topic :: Utilities",
]

# No dependencies - uses only standard library
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "mypy>=1.0",
]

[project.scripts]
firefox-forensics = "main:main"
firefox-decrypt = "nss_decrypt:main"

[project.urls]
Homepage = "https://github.com/user/firefox-forensics"
Documentation = "https://github.com/user/firefox-forensics#readme"
Repository = "https://github.com/user/firefox-forensics"
Issues = "https://github.com/user/firefox-forensics/issues"

[tool.setuptools]
py-modules = ["main", "nss_decrypt", "extractor", "formatters", "queries", "utils"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
